changed the blogpages colors

--- a/src/componentz/BlogFilterer/styles.scss
+++ b/src/componentz/BlogFilterer/styles.scss
@@ -1,7 +1,9 @@
-@import "../../constants/scss/colors";
-@import "../../constants/scss/variables";
-@import "../../constants/scss/mixins";
-@import "../../constants/scss/framework";
+@import '../../constants/scss/colors';
+@import '../../constants/scss/variables';
+@import '../../constants/scss/mixins';
+@import '../../constants/scss/framework';
+
+$oakGold: #cac492;
 
 .line {
   width: 15em;
@@ -14,11 +16,11 @@
   //   background-image: linear-gradient(#0aa7ff, #0aa5ff3a), url(../../assets/images/placeholder.png);
 }
 .for-parents {
-  background-color: #a2ddff;
+  background-color: $oakGold;
 }
 .for-siblings {
-  background-color: #ff8ce6;
+  background-color: $oakGold;
 }
 .for-carers {
-  background-color: #ffdf8c;
+  background-color: $oakGold;
 }
