--- a/src/componentz/BlogOverview/styles.scss
+++ b/src/componentz/BlogOverview/styles.scss
@@ -1,8 +1,8 @@
-@import "../../constants/scss/colors";
-@import "../../constants/scss/default";
-@import "../../constants/scss/variables";
-@import "../../constants/scss/mixins";
-@import "../../constants/scss/framework";
+@import '../../constants/scss/colors';
+@import '../../constants/scss/default';
+@import '../../constants/scss/variables';
+@import '../../constants/scss/mixins';
+@import '../../constants/scss/framework';
 
 .blog-overview {
   padding: 2em 2%;
