--- a/src/componentz/BlogOverviewPostPreview/styles.scss
+++ b/src/componentz/BlogOverviewPostPreview/styles.scss
@@ -1,6 +1,6 @@
-@import "../../constants/scss/colors";
-@import "../../constants/scss/variables";
-@import "../../constants/scss/mixins";
+@import '../../constants/scss/colors';
+@import '../../constants/scss/variables';
+@import '../../constants/scss/mixins';
 
 .blog-overview-post-preview-container {
   flex: 0 0 calc(100% / 2) !important;
@@ -27,13 +27,13 @@
       position: relative;
       box-shadow: $shadow;
       .for-parents-button {
-        background-color: lighten($color: $for_parents, $amount: 10);
+        background-color: lighten($color: $oakGold, $amount: 10);
       }
       .for-siblings-button {
-        background-color: lighten($color: $for_siblings, $amount: 10);
+        background-color: lighten($color: $oakGold, $amount: 10);
       }
       .for-carers-button {
-        background-color: lighten($color: $for_carers, $amount: 10);
+        background-color: lighten($color: $oakGold, $amount: 10);
       }
       .tag-button {
         position: absolute;
