--- a/src/constants/scss/colors.scss
+++ b/src/constants/scss/colors.scss
@@ -7,3 +7,12 @@ $warn: #ffc107;
 $for_parents: #0aa7ff;
 $for_siblings: #ff0ac9;
 $for_carers: #ffba0a;
+
+$teal: #009ba7;
+$grey: #a9a6a6;
+$blue: #0aa7ff;
+$purple: #ff0ac9;
+$yellow: #ffba0a;
+$pink: #ff34ba;
+
+$oakGold: #cac492;
