--- a/src/componentz/BlogFilterer/styles.scss
+++ b/src/componentz/BlogFilterer/styles.scss
@@ -10,9 +10,21 @@ $oakGold: #cac492;
   height: 0.05em;
   background-color: $black;
 }
+
+.blog-filterer {
+  flex-wrap: wrap;
+}
+.filtering-buttons {
+  flex-wrap: wrap;
+}
 .filter-button {
   padding: 1em 3em;
   font-size: 1.3em;
+
+  @include smartphone() {
+    margin: 1rem 0 0 0;
+  }
+
   //   background-image: linear-gradient(#0aa7ff, #0aa5ff3a), url(../../assets/images/placeholder.png);
 }
 .for-parents {
