--- a/src/componentz/TagOverview/styles.scss
+++ b/src/componentz/TagOverview/styles.scss
@@ -15,6 +15,11 @@
     display: flex;
     flex-direction: column;
     justify-content: center;
+
+    @include smartphone() {
+      min-height: 0;
+      padding: 4em 2em;
+    }
     .hero-text-wrapper {
       flex: 0 0 calc(100% / 2.5);
       max-width: calc(100% / 2.5);
@@ -34,6 +39,10 @@
         letter-spacing: 0.15em;
         line-height: 1.3;
         color: $white;
+
+        @include smartphone() {
+          font-size: 5em;
+        }
       }
       .hero-description {
         color: $white;
@@ -45,18 +54,31 @@
 .article-data {
   display: flex;
   justify-content: flex-start;
+  @include smartphone() {
+    // flex-direction: column;
+  }
   .tumbnail {
     flex: 0 0 calc(100% / 1.7);
     max-width: calc(100% / 1.7);
     background-repeat: no-repeat;
     background-size: 100%;
     background-position: center;
+
+    @include smartphone() {
+      display: none;
+      height: 180px;
+      width: 100px;
+    }
   }
   .article-text-button {
     flex: 0 0 calc(100% / 3);
     max-width: calc(100% / 3);
     position: relative;
     overflow: hidden;
+    @include smartphone() {
+      max-width: 100%;
+      flex: 0 0 auto;
+    }
     .article-text {
       .main-article-title {
         // font-size: 5em;
