--- a/src/componentz/BlogOverviewPostPreview/styles.scss
+++ b/src/componentz/BlogOverviewPostPreview/styles.scss
@@ -51,6 +51,7 @@
         margin-top: auto;
         margin-bottom: 2em;
         .title {
+          font-family: "Archivo", sans-serif;
           font-size: 1.6em;
           cursor: pointer;
         }
@@ -60,6 +61,7 @@
       }
     }
     .hook {
+      font-family: "Archivo", sans-serif;
       font-size: 1.4em;
       margin-bottom: 1.5em;
     }
