--- a/src/componentz/BlogOverviewPostPreview/styles.scss
+++ b/src/componentz/BlogOverviewPostPreview/styles.scss
@@ -1,6 +1,6 @@
-@import '../../constants/scss/colors';
-@import '../../constants/scss/variables';
-@import '../../constants/scss/mixins';
+@import "../../constants/scss/colors";
+@import "../../constants/scss/variables";
+@import "../../constants/scss/mixins";
 
 .blog-overview-post-preview-container {
   flex: 0 0 calc(100% / 2) !important;
@@ -61,7 +61,7 @@
       }
     }
     .hook {
-      font-family: "Archivo", sans-serif;
+      font-family: "Archivo", sans-serif !important;
       font-size: 1.4em;
       margin-bottom: 1.5em;
     }
