made changes site-wide

--- a/src/Scss/churchMessage.scss
+++ b/src/Scss/churchMessage.scss
@@ -86,7 +86,7 @@ $gold: #cac492;
       height: 600px;
       width: 500px;
       margin-top: -30px;
-      background: url(../Assets/church.svg);
+      background: url(../Assets/images/church.svg);
       @include BGConfig(100%, top);
       position: relative;
     }
