--- a/src/pages/TrainingAndResourcing/TrainingAndResourcing.scss
+++ b/src/pages/TrainingAndResourcing/TrainingAndResourcing.scss
@@ -114,10 +114,31 @@ $Archivo: 'Archivo', sans-serif;
     font-family: $Archivo;
     font-style: normal;
     font-weight: normal;
-    font-size: 26.4px;
+    font-size: 24px;
     line-height: 47.2px;
     color: #ffffff;
     margin: 2rem 0;
+  }
+
+  .getCourse {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 400px;
+    height: 76px;
+    background: white;
+    border-radius: 900px;
+    color: $gold;
+    cursor: pointer;
+
+    font-style: normal;
+    font-weight: 500;
+    font-size: 25px;
+    line-height: 31px;
+
+    &:active {
+      transform: scale(0.98);
+    }
   }
 }
 
@@ -134,40 +155,8 @@ $Archivo: 'Archivo', sans-serif;
     font-style: normal;
     font-weight: normal;
     font-size: 24px;
-    line-height: 24px;
-    margin-bottom: 2rem;
-  }
-  ul {
-    li {
-      font-style: normal;
-      font-weight: normal;
-      font-size: 23px;
-      line-height: 41px;
-      color: rgba(0, 0, 0, 0.49);
-      list-style: outside;
-      margin-bottom: 2rem;
-      margin-left: 1rem;
-    }
-  }
-  h1 {
-    font-family: $DM;
-    font-weight: normal;
-    font-size: 48px;
-    line-height: 55px;
-    color: #000000;
-    position: relative;
-    margin-bottom: 3rem;
-
-    &::before {
-      content: '';
-      position: absolute;
-      left: 0;
-      bottom: -1rem;
-      width: 50px;
-      height: 10px;
-      background: $gold;
-      border-radius: 10px;
-    }
+    line-height: 47.2px;
+    margin: 2rem 0;
   }
 
   .getCourse {
@@ -277,12 +266,12 @@ $Archivo: 'Archivo', sans-serif;
   #topicCardContent {
     display: flex;
     align-items: center;
-    height: 167px;
+    height: max-content;
+    padding: 1rem 2rem;
     width: 857px;
     background: #ffffff;
     box-shadow: 0px 0px 19px rgba(0, 0, 0, 0.144);
     border-radius: 12px;
-    padding: 0 2rem;
     font-style: normal;
     font-weight: normal;
     font-size: 23px;
