--- a/src/Scss/churchMessage.scss
+++ b/src/Scss/churchMessage.scss
@@ -168,8 +168,8 @@ $gold: #cac492;
   margin-top: 6rem;
   #WhatToDo {
     // width: 50%;
-    min-width: 801px;
-    height: 763px;
+    min-width: 701px;
+    height: max-content;
     background: $gold;
     box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.1);
     border-radius: 12px;
@@ -178,8 +178,8 @@ $gold: #cac492;
     h2 {
       color: white;
       font-weight: normal;
-      font-size: 55px;
-      line-height: 55px;
+      font-size: 48px;
+      line-height: auto;
       margin-bottom: 2rem;
     }
     ul {
@@ -189,7 +189,7 @@ $gold: #cac492;
         font-style: normal;
         font-weight: normal;
         font-size: 23px;
-        line-height: 52px;
+        line-height: auto;
         margin-bottom: 1rem;
         margin-left: 1rem;
       }
@@ -197,12 +197,12 @@ $gold: #cac492;
   }
   #HowToDoWhatToDo {
     margin-left: 2rem;
+    margin-top: 1.25rem;
     h3 {
       width: 482px;
       font-weight: normal;
-      font-size: 55px;
-      line-height: 63px;
-
+      font-size: 48px;
+      line-height: auto;
       color: #000000;
       margin-bottom: 3rem;
       position: relative;
@@ -221,7 +221,7 @@ $gold: #cac492;
       li {
         font-weight: normal;
         font-size: 22px;
-        line-height: 27px;
+        line-height: auto;
         color: #000000;
         list-style: url(../Assets/icons/hyphen.svg);
         margin-bottom: 1rem;
