--- a/src/Scss/homepage.scss
+++ b/src/Scss/homepage.scss
@@ -66,6 +66,20 @@ $oakGold: #cac492;
         flex-wrap: wrap;
         justify-content: space-between;
         align-content: space-between;
+        #about {
+          #btn {
+            padding: 1rem;
+            height: 73px;
+            #icon {
+              display: none;
+            }
+            p {
+              margin-bottom: 0;
+              color: white;
+              max-width: none;
+            }
+          }
+        }
       }
     }
 
