Adjusted the size of TopicCards

--- a/src/pages/PublicSpeaking/PublicSpeaking.scss
+++ b/src/pages/PublicSpeaking/PublicSpeaking.scss
@@ -279,25 +279,25 @@ $gold: #cac492;
       h2 {
         color: white;
         font-weight: normal;
-        font-size: 55px;
-        line-height: 55px;
+        font-size: 48px;
+        line-height: auto;
         margin-bottom: 2rem;
       }
       p {
         color: white;
         font-style: normal;
         font-weight: normal;
-        font-size: 29px;
-        line-height: 52px;
+        font-size: 26px;
+        line-height: auto;
       }
     }
     #churchTopic {
       margin-left: 2rem;
       h3 {
-        width: 482px;
+        width: 550px;
         font-weight: normal;
-        font-size: 50px;
-        line-height: 60px;
+        font-size: 48px;
+        line-height: normal;
         color: #000000;
         margin-bottom: 3rem;
         position: relative;
